--- a/vls/src/components/loading/loading.css
+++ b/vls/src/components/loading/loading.css
@@ -1,8 +1,6 @@
-
-
 .loader-container{
-    position: absolute;
-    background-color: white;
+    
+    background-color: black;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -11,11 +9,13 @@
     transition: opacity 1s ease-in-out;
 }
 
-.do{
+.dot{
     width: 50px;
     height: 50px;
-    color: black;
+    border-radius: 50%;
+    background: black;
     margin: 0px 15px;
+    animation: loader infinite 0.3s alternate;
 }
 
 
