essaye de comprendre affivher components avec onClick

--- a/vls/src/components/loading/loading.css
+++ b/vls/src/components/loading/loading.css
@@ -1,6 +1,6 @@
 .loader-container{
     
-    background-color: black;
+    background-color: white;
     width: 100vw;
     height: 100vh;
     display: flex;
