--- a/vls/src/components/loading/loading.css
+++ b/vls/src/components/loading/loading.css
@@ -19,6 +19,19 @@
 }
 
 
+.d2{
+    animation-delay: 50ms;
+}
+
+.d3{
+    animation-delay: 100ms;
+}
+
+@keyframes loader {
+    100%{
+        transform: translateY(-30px);
+    }
+}
 
 
 
